# aurakeeper

./: .gitignore  AGENTS.md  Makefile  README.md  openapi.yaml  run-local.sh
agent/: .gitignore  CLAUDE.md  Makefile  OPERATIONS.md  README.md  REPOSITORY_SETUP.md
agent/frontend/: .env.example  .gitignore  index.html  package-lock.json  package.json  vite.config.ts
agent/scripts/: orchestrator.py  state_server.py
agents/: replicator.md  tester.md  worker.md
backend/: .gitignore  README.md  bun.lockb  package.json
backend/data/: aurakeeper.sqlite
backend/src/: app.test.ts  app.ts  config.ts  db.ts  error-logs.ts  examples.ts  index.ts  (+10 more)
cli/: README.md  package-lock.json  package.json  pyproject.toml  tsconfig.json
cli/src/: index.ts
cli/src/aurakeeper_cli/: backend.py  main.py  patching.py  process.py  repository.py  state.py  worker_pipeline.py
cli/src/aurakeeper_cli.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
cli/src/aurakeeper_cli/commands/: onboard.py  start.py  status.py  worker_run.py
cli/src/commands/: hook.ts  index.ts  local.ts
cli/src/lib/: codex.ts  project.ts
cli/templates/: hook-playbook.md
connectors/python/: README.md  pyproject.toml
connectors/python/aurakeeper/: __init__.py  connector.py
connectors/python/examples/: README.md
connectors/python/examples/standalone/: app.py  main.py  test_app.py
docs/: local-cli-onboard-design.md  local-e2e-workflow.md
examples/: Makefile  registry.json
frontend/: .env  index.html  package.json  pnpm-lock.yaml
scripts/: run-example.mjs  verify-example.mjs
(+124 files in other folders)
