[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "aurakeeper-cli"
version = "0.1.0"
description = "Local AuraKeeper onboarding CLI"
requires-python = ">=3.11"
dependencies = []

[project.scripts]
aurakeeper = "aurakeeper_cli.main:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
