[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "aurakeeper-python-connector"
version = "0.1.0"
description = "Generic Python connector for sending application errors to AuraKeeper."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "UNLICENSED" }
authors = [
  { name = "AuraKeeper" }
]
keywords = ["logging", "errors", "monitoring", "observability", "connector"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "License :: Other/Proprietary License",
  "Operating System :: OS Independent"
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["aurakeeper*"]
